--- a/src/main/resources/application-mogenius.properties
+++ b/src/main/resources/application-mogenius.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:${MYSQL_DB_URL}
-spring.datasource.username=ux7wbjn8k5tnm0aq
-spring.datasource.password=tgoXf6bDyUWMpJJDXJ7J
+#spring.datasource.username=ux7wbjn8k5tnm0aq
+#spring.datasource.password=tgoXf6bDyUWMpJJDXJ7J
 
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
