--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
@@ -32,12 +34,6 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
-
 tasks.named('test') {
-    onlyIf {
-        project.hasProperty("runtests")
-    }
-    doLast {
         useJUnitPlatform()
-    }
 }
