--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'mysql:mysql-connector-java'
-//    runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.4.0'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vitage', module: 'junit-vintage-engine'
@@ -36,5 +35,10 @@ dependencies {
 }
 
 tasks.named('test') {
+    onlyIf {
+        project.hasProperty("runtests")
+    }
+    doLast {
         useJUnitPlatform()
+    }
 }
