--- a/src/main/resources/application-mogenius.properties
+++ b/src/main/resources/application-mogenius.properties
@@ -18,3 +18,5 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 admin.mail=otherstaff1742@gmail.com
+# Hikari
+spring.datasource.hikari.max-lifetime=200000
