--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 admin.mail=otherstaff1742@gmail.com
+admin.name= albert
 
 #SPRING ACTUATOR
 management.endpoints.web.exposure.include=*
